--- a/scripts/install
+++ b/scripts/install
@@ -71,17 +71,12 @@ ynh_config_add_systemd --service="${app}-workers" --template="karakeep-workers.s
 yunohost service add "${app}-workers" --description="Bookmark-everything app" --log="/var/log/$app/${app}-workers.log"
 yunohost service add "${app}-web" --description="Bookmark-everything app" --log="/var/log/$app/${app}-web.log"
 yunohost service add "${app}-browser" --description="Bookmark-everything app" --log="/var/log/$app/$app.log"
-
 #yunohost service add "meilisearch" --description="Bookmark-everything app" --log="/var/log/$app/$app.log"
 
 #=================================================
 # INSTALL KARAKEEP
 #=================================================
 ynh_script_progression "Installing the app..."
-
-#pushd "$install_dir"
-#	ynh_hide_warnings npm install -g corepack@0.31.0
-#popd
 
 pushd "$install_dir/apps/web"
 	export NEXT_TELEMETRY_DISABLED=1
@@ -103,6 +98,8 @@ popd
 pushd "$install_dir/packages/db"
   	ynh_hide_warnings pnpm migrate
 popd
+
+echo "$release" >$install_dir/version.txt
 
 #=================================================
 # START SYSTEMD SERVICE
