--- a/scripts/install
+++ b/scripts/install
@@ -20,7 +20,9 @@ ynh_hide_warnings corepack enable && corepack prepare pnpm@latest --activate
 #=================================================
 
 release=$(curl -s https://api.github.com/repos/karakeep-app/karakeep/releases/latest | grep "tag_name" | awk '{print substr($2, 3, length($2)-4) }')
+
 secret==$(ynh_string_random --length=36)
+ynh_app_setting_set --key=secret --value=$secret
 
 #=================================================
 # DOWNLOAD, CHECK AND UNPACK SOURCE
