--- a/scripts/install
+++ b/scripts/install
@@ -45,10 +45,10 @@ chmod +x "/usr/bin/monolith"
 #=================================================
 ynh_script_progression "Adding $app's configuration files..."
 
-ynh_config_add --template=".env" --destination="$install_dir/karakeep.env"
+ynh_config_add --template=".env" --destination="$install_dir/.env"
 
-chmod 600 "$install_dir/karakeep.env"
-chown "$app:$app" "$install_dir/karakeep.env"
+chmod 600 "$install_dir/.env"
+chown "$app:$app" "$install_dir/.env"
 
 #=================================================
 # LOGROTATE
@@ -83,16 +83,26 @@ yunohost service add "${app}-browser" --description="Bookmark-everything app" --
 #=================================================
 ynh_script_progression "Installing the app..."
 
-pushd "$install_dir/apps/web"
-	export NEXT_TELEMETRY_DISABLED=1
-	export PUPPETEER_SKIP_DOWNLOAD="true"
-	export CI="true"
+export NEXT_TELEMETRY_DISABLED=1
+export PUPPETEER_SKIP_DOWNLOAD="true"
+export CI="true"
+export NODE_ENV=production
+
+pushd "$install_dir/packages/db"
   	ynh_hide_warnings pnpm install --frozen-lockfile
-  	ynh_hide_warnings pnpm build
+	ynh_hide_warnings pnpm dlx @vercel/ncc build migrate.ts -o /db_migrations
+	cp -R drizzle /db_migrations
+popd
+
+pushd "$install_dir/apps/web"
+  	ynh_hide_warnings pnpm install --frozen-lockfile
+  	ynh_hide_warnings pnpm exec next build --experimental-build-mode compile
 popd
 
 pushd "$install_dir/apps/workers"
   	ynh_hide_warnings pnpm install --frozen-lockfile
+	ynh_hide_warnings pnpm build
+	ynh_hide_warnings pnpm deploy --node-linker=isolated --filter @karakeep/workers --prod /prod/workers
 popd
 
 pushd "$install_dir/apps/cli"
@@ -100,8 +110,9 @@ pushd "$install_dir/apps/cli"
   	ynh_hide_warnings pnpm build
 popd
 
-pushd "$install_dir/packages/db"
-  	ynh_hide_warnings pnpm migrate
+pushd "$install_dir/apps/mcp"
+	ynh_hide_warnings pnpm install --frozen-lockfile
+	ynh_hide_warnings pnpm build
 popd
 
 echo "$release" >$install_dir/version.txt
