--- a/scripts/install
+++ b/scripts/install
@@ -94,8 +94,9 @@ popd
 
 pushd "$install_dir/packages/db"
 	ynh_script_progression "Building the database..."
-	ynh_hide_warnings pnpm dlx @vercel/ncc build migrate.ts -o $install_dir/
-	cp -R drizzle $install_dir/
+	ynh_hide_warnings pnpm dlx @vercel/ncc build migrate.ts -o $install_dir/db
+	cp -R drizzle $install_dir/db
+	ynh_hide_warnings pnpm run migrate
 popd
 
 pushd "$install_dir/apps/web"
@@ -106,7 +107,7 @@ popd
 pushd "$install_dir/apps/workers"
 	ynh_script_progression "Building the workers..."
 	ynh_hide_warnings pnpm build
-	ynh_hide_warnings pnpm deploy --node-linker=isolated --filter @karakeep/workers --prod
+	ynh_hide_warnings pnpm deploy --node-linker=isolated --filter @karakeep/workers
 popd
 
 pushd "$install_dir/apps/cli"
@@ -135,9 +136,9 @@ ynh_systemctl --service="${app}-workers" --action="start"
 ynh_systemctl --service="${app}-web" --action="start"
 ynh_systemctl --service="${app}-browser" --action="start"
 
-pushd "$install_dir/db_migrations"
-	ynh_hide_warnings exec node index.js
-popd
+#pushd "$install_dir/db_migrations"
+#	ynh_hide_warnings exec node index.js
+#popd
 
 #=================================================
 # END OF SCRIPT
