--- a/scripts/install
+++ b/scripts/install
@@ -89,6 +89,8 @@ export PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=1
 export CI="true"
 export DATA_DIR=$install_dir/db
 
+mkdir "$install_dir/db"
+
 pushd "$install_dir"
   	ynh_hide_warnings pnpm install --frozen-lockfile
 	ynh_hide_warnings pnpm run db:migrate
