--- a/scripts/install
+++ b/scripts/install
@@ -88,6 +88,7 @@ export PUPPETEER_SKIP_DOWNLOAD="true"
 export PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=1
 export CI="true"
 export DATA_DIR=$install_dir/db
+export NEXTAUTH_SECRET=$secret
 
 mkdir "$install_dir/db"
 
