--- a/scripts/install
+++ b/scripts/install
@@ -104,7 +104,8 @@ popd
 
 pushd "$install_dir/apps/workers"
 	ynh_script_progression "Building the workers..."
-	ynh_hide_warnings pnpm deploy --filter @karakeep/workers --prod "$install_dir/apps/workers"
+	ynh_hide_warnings pnpm build
+	ynh_hide_warnings pnpm deploy --node-linker=isolated --filter @karakeep/workers --prod "$install_dir/apps/workers/prod/"
 popd
 
 pushd "$install_dir/apps/cli"
