--- a/scripts/install
+++ b/scripts/install
@@ -133,7 +133,7 @@ ynh_safe_rm "$install_dir/apps/landing"
 
 chmod -R 775 "$install_dir"
 chmod -R o-rwx "$install_dir"
-chown -R $app:$app "$install_dir"
+chown -R $app:www-data "$install_dir"
 
 #=================================================
 # START SYSTEMD SERVICE
