--- a/scripts/install
+++ b/scripts/install
@@ -26,9 +26,6 @@ release=$(curl -s https://api.github.com/repos/karakeep-app/karakeep/releases/la
 secret==$(ynh_string_random --length=36)
 ynh_app_setting_set --key=secret --value=$secret
 
-# Set `service` settings to support `yunohost app shell` command
-ynh_app_setting_set --key=service --value="$app-web.service"
-
 #=================================================
 # DOWNLOAD, CHECK AND UNPACK SOURCE
 #=================================================
@@ -107,7 +104,7 @@ popd
 
 pushd "$install_dir/apps/workers"
 	ynh_script_progression "Building the workers..."
-	ynh_hide_warnings pnpm add better-sqlite3
+	ynh_hide_warnings pnpm add better-sqlite3 dotenv
 	ynh_hide_warnings pnpm build
 popd
 
