--- a/scripts/install
+++ b/scripts/install
@@ -90,7 +90,7 @@ export CI="true"
 export DATA_DIR=$install_dir/db
 export NEXTAUTH_SECRET=$secret
 
-mkdir "$install_dir/db"
+mkdir -p "$install_dir/db"
 
 pushd "$install_dir"
   	ynh_hide_warnings pnpm install --frozen-lockfile
