--- a/scripts/install
+++ b/scripts/install
@@ -123,7 +123,7 @@ echo "$release" >$install_dir/version.txt
 
 #remove unneeded files
 pushd $install_dir
-ynh_hide_warnings ynh_exec_as_app pnpm prune --prod --ignore-scripts --force
+ynh_hide_warnings ynh_exec_as_app pnpm prune --prod --ignore-scripts
 ynh_hide_warnings ynh_exec_as_app pnpm store prune --force
 popd
 ynh_safe_rm "$install_dir/apps/mobile"
