--- a/scripts/install
+++ b/scripts/install
@@ -91,28 +91,28 @@ export NEXTAUTH_SECRET=$secret
 mkdir "$install_dir/db"
 
 pushd "$install_dir"
-  	ynh_hide_warnings pnpm install --frozen-lockfile
-	ynh_hide_warnings pnpm run db:migrate
+  	ynh_hide_warnings exec_as_app pnpm install --frozen-lockfile
+	ynh_hide_warnings exec_as_app pnpm run db:migrate
 popd
 
 pushd "$install_dir/apps/web"
 	ynh_script_progression "Building the web..."
-  	ynh_hide_warnings pnpm exec next build --experimental-build-mode compile
+  	ynh_hide_warnings exec_as_app pnpm exec next build --experimental-build-mode compile
 popd
 
 pushd "$install_dir/apps/workers"
 	ynh_script_progression "Building the workers..."
-	ynh_hide_warnings pnpm build
+	ynh_hide_warnings exec_as_app pnpm build
 popd
 
 pushd "$install_dir/apps/cli"
 	ynh_script_progression "Building the cli..."
-  	ynh_hide_warnings pnpm build
+  	ynh_hide_warnings exec_as_app pnpm build
 popd
 
 pushd "$install_dir/apps/mcp"
 	ynh_script_progression "Building the mcp..."
-	ynh_hide_warnings pnpm build
+	ynh_hide_warnings exec_as_app pnpm build
 popd
 
 echo "$release" >$install_dir/version.txt
@@ -120,7 +120,7 @@ echo "$release" >$install_dir/version.txt
 #remove unneeded files
 ynh_script_progression "Removing unneeded files..."
 pushd $install_dir
-ynh_hide_warnings pnpm prune --prod --ignore-scripts
+ynh_hide_warnings exec_as_app pnpm prune --prod --ignore-scripts
 popd
 ynh_safe_rm "$install_dir/apps/mobile"
 ynh_safe_rm "$install_dir/apps/landing"
