--- a/scripts/install
+++ b/scripts/install
@@ -146,6 +146,8 @@ chmod -R 775 "$install_dir"
 chmod -R o-rwx "$install_dir"
 chown -R $app:www-data "$install_dir"
 
+chown -R $app:$app "$data_dir"
+
 #=================================================
 # START SYSTEMD SERVICE
 #=================================================
